--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ img {
 
 #spanId {
     margin: 50px;
+    font-size: 18px;
 }
 
 #thirdDiv {
@@ -15,7 +16,9 @@ img {
     width: 500px;
     color: aliceblue;
     padding: 50px;
-    border: 10px;
-    border-style: solid;
-    border-color: black;
+    background-color: beige;
+    border: 10px solid black;
+
+
+
 }
